--- a/classUT-repository/src/main/resources/templates/register.html
+++ b/classUT-repository/src/main/resources/templates/register.html
@@ -49,28 +49,28 @@
               <label class="form-label">First Name</label>
               <input
                       class="form-control"
-                      id="firstName"
-                      name="firstName"
+                      id="Name"
+                      name="Name"
                       placeholder="Enter first name"
-                      th:field="*{firstName}"
+                      th:field="*{Name}"
                       type="text"
               />
-              <p th:errors = "*{firstName}" class="text-danger"
-              th:if="${#fields.hasErrors('firstName')}"></p>
+              <p th:errors = "*{Name}" class="text-danger"
+              th:if="${#fields.hasErrors('Name')}"></p>
             </div>
 
             <div class="form-group mb-3">
               <label class="form-label">Last Name</label>
               <input
                       class="form-control"
-                      id="lastName"
-                      name="lastName"
-                      placeholder="Enter last name"
-                      th:field="*{lastName}"
+                      id="Surname"
+                      name="Surname"
+                      placeholder="Enter Surname"
+                      th:field="*{Surname}"
                       type="text"
               />
-              <p th:errors = "*{lastName}" class="text-danger"
-                 th:if="${#fields.hasErrors('lastName')}"></p>
+              <p th:errors = "*{Surname}" class="text-danger"
+                 th:if="${#fields.hasErrors('Surname')}"></p>
             </div>
 
             <div class="form-group mb-3">
@@ -91,14 +91,14 @@
               <label class="form-label">Password</label>
               <input
                       class="form-control"
-                      id="password"
-                      name="password"
+                      id="psw"
+                      name="psw"
                       placeholder="Enter password"
-                      th:field="*{password}"
+                      th:field="*{psw}"
                       type="password"
               />
-              <p th:errors = "*{password}" class="text-danger"
-                 th:if="${#fields.hasErrors('password')}"></p>
+              <p th:errors = "*{psw}" class="text-danger"
+                 th:if="${#fields.hasErrors('psw')}"></p>
             </div>
             <div class="form-group">
               <button class="btn btn-primary" type="submit">Register</button>
